<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/iphone"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etemail"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Email"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            android:backgroundTint="@color/cardview_light_background"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="0dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etpassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="88dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:backgroundTint="@color/cardview_light_background" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#F0C0E2" />

    <TextView
        android:id="@+id/tvda"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="Dont have an account?"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvsignup"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="New User Signup?"
        android:layout_marginLeft="30sp"
        android:textAllCaps="true"
        android:textColor="@color/purple_700"
        android:textSize="15sp" />


</LinearLayout>
</ScrollView>